--- a/deepsort.ipynb
+++ b/deepsort.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "bI9dzSuEc05S"
       },
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {
         "id": "RPl-t_jec3xi"
       },
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,7 +63,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✅ CUDA available: False\n"
+            "Is CUDA available:  False\n"
           ]
         }
       ],
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "collapsed": true,
         "id": "2WqEIkBmc35a"
@@ -86,8 +86,34 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "^C\n",
+            "[INFO] Using device: cpu\n",
             "finished\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Alexey\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torchreid\\reid\\metrics\\rank.py:11: UserWarning: Cython evaluation (very fast so highly recommended) is unavailable, now use python evaluation.\n",
+            "  warnings.warn(\n",
+            "Traceback (most recent call last):\n",
+            "  File \"D:\\projects\\deep_sort\\run_batch.py\", line 27, in <module>\n",
+            "    run_tracking(\n",
+            "  File \"D:\\projects\\deep_sort\\run_tracker.py\", line 49, in run_tracking\n",
+            "    detector = create_detector(config.detector, device)\n",
+            "  File \"D:\\projects\\deep_sort\\run_tracker.py\", line 29, in create_detector\n",
+            "    return SSDDetector(cfg.confidence, device=device)\n",
+            "  File \"D:\\projects\\deep_sort\\detectors\\ssd_detector.py\", line 13, in __init__\n",
+            "    weights = torch.load(weights_path, map_location=self.device)\n",
+            "  File \"c:\\Users\\Alexey\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\ultralytics\\utils\\patches.py\", line 119, in torch_load\n",
+            "    return _torch_load(*args, **kwargs)\n",
+            "  File \"c:\\Users\\Alexey\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\serialization.py\", line 1479, in load\n",
+            "    with _open_file_like(f, \"rb\") as opened_file:\n",
+            "  File \"c:\\Users\\Alexey\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\serialization.py\", line 759, in _open_file_like\n",
+            "    return _open_file(name_or_buffer, mode)\n",
+            "  File \"c:\\Users\\Alexey\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\serialization.py\", line 740, in __init__\n",
+            "    super().__init__(open(name, mode))\n",
+            "FileNotFoundError: [Errno 2] No such file or directory: 'resources/models/ssdlite320.pth'\n"
           ]
         }
       ],
@@ -8125,7 +8151,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -8139,7 +8165,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.9.13"
     }
   },
   "nbformat": 4,
